# privcount

./: .bumpversion.cfg  .gitignore  CONTRIBUTORS.markdown  DEPLOY.markdown  INSTALL.PyPy.markdown  INSTALL.markdown  LICENSE  README  README.markdown  README.old  README.old.txt  ReleaseNotes.markdown  requirements-plot.txt  requirements-weights.txt  requirements.txt  setup.py
D2/: D2-core.py  exit_weight.py  noise.py
S2/: S2-core.py  StatKeeper.py  consensus  exit_weight.py  fingerprint  noise.py
doc/: CounterChecks.markdown  CounterDefinitions.markdown  CounterNames.markdown  CounterTests.markdown  NamingCounters.markdown  PrivCountAuthentication.markdown  PrivCountVersion.markdown  TorBranch.markdown  TorControlAuthentication.markdown  TorEvents.markdown  TorNetworkOverhead.markdown
privcount/: __init__.py  config.py  connection.py  counter.py  crypto.py  data_collector.py  inject.py  log.py  match.py  node.py  plot.py  protocol.py  share_keeper.py  statistics_noise.py  tagged_event.py  tally_key_server.py  tally_server.py  traffic_model.py  util.py
privex/: __init__.py  data_collector.py  privex  tally_key_server.py  tally_server.py  util.py
s2-net-old/: exitListener.py  noise.py  router.py
src/: clean_list_2.txt  fingerprint  tkglist.txt  websites-20150509.txt
test/: README.markdown  as-ipv4-extra.txt  as-ipv4-test.ipasn  as-ipv6-extra.txt  as-ipv6-test.ipasn  as-rank.txt  as-top-100.txt  circuit-failure-general.txt  circuit-failure-intro-legacy.txt  circuit-failure-intro-v3.txt  circuit-failure-rend.txt  config.yaml  (+56 more)
tools/: CMakeLists.txt  privexctl.c
(+51 files in other folders)
